[Chromecast] Set all video to opaque

Our video overlay codepath was broken here; this change rejects
non-opaque video frames for overlay:
https://codereview.chromium.org/2162663003

BUG=639182
TEST=manual

Review-Url: https://codereview.chromium.org/2257873004
Cr-Commit-Position: refs/heads/master@{#413219}